--- a/index.html
+++ b/index.html
@@ -57,7 +57,10 @@
         </ul>
       </nav>
       <button class="hidden md:block bg-primary hover:bg-primary/90 text-white px-4 py-2 rounded-lg transition-all shadow-md hover:shadow-lg">
-        <span class="fa fa-download mr-2"></span>下载简历
+        <span class="fa fa-download mr-2"></span>
+        <a href="https://github.com/2803246197/JinTangLin/blob/main/AI%E5%B7%A5%E7%A8%8B%E5%B8%88.pdf" download>
+          下载简历
+        </a>
       </button>
     </div>
   </header>
@@ -126,7 +129,7 @@
               <h3 class="font-semibold text-lg mb-2 flex items-center">
                 <span class="fa fa-code text-primary mr-2"></span>技术方向
               </h3>
-              <p class="text-gray-700">AIGC | 多模态数字人 | AR工业检测</p>
+              <p class="text-gray-700">AIGC | AI大模型开发 | AI工业机器人</p>
             </div>
           </div>
         </div>
@@ -618,16 +621,16 @@
             专注于人工智能与软件开发领域，具备丰富的项目经验和扎实的技术基础，期待在相关领域寻找发展机会。
           </p>
           <div class="flex space-x-4">
-            <a href="#" class="text-gray-300 hover:text-white transition-colors">
+            <a href="https://github.com/2803246197" class="text-gray-300 hover:text-white transition-colors">
               <span class="fa fa-envelope-o text-xl"></span>
             </a>
-            <a href="#" class="text-gray-300 hover:text-white transition-colors">
+            <a href="https://github.com/2803246197" class="text-gray-300 hover:text-white transition-colors">
               <span class="fa fa-phone text-xl"></span>
             </a>
-            <a href="#" class="text-gray-300 hover:text-white transition-colors">
+            <a href="https://github.com/2803246197" class="text-gray-300 hover:text-white transition-colors">
               <span class="fa fa-github text-xl"></span>
             </a>
-            <a href="#" class="text-gray-300 hover:text-white transition-colors">
+            <a href="https://www.linkedin.com/in/%E5%AD%90%E6%9D%B0-%E6%9E%97-480183345/" class="text-gray-300 hover:text-white transition-colors">
               <span class="fa fa-linkedin text-xl"></span>
             </a>
           </div>
@@ -718,6 +721,14 @@
         observer.observe(card);
       });
     });
+    /*
+    // 下载按钮点击事件
+      document.getElementById('downloadResumeBtn').addEventListener('click', function() {
+      // 方式一：直接下载
+      window.location.href = 'https://github.com/2803246197/JinTangLin/blob/main/AI%E5%B7%A5%E7%A8%8B%E5%B8%88.pdf';
+    });
+
+     */
   </script>
 </body>
 </html>
